--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
     "server": "nodemon index.js"
   },
   "dependencies": {
+    "core-util-is": "^1.0.2",
+    "express": "^4.17.1",
     "knex": "^0.19.4",
     "sqlite3": "^4.1.0"
   },
